--- a/.github/workflows/core-tests.yml
+++ b/.github/workflows/core-tests.yml
@@ -119,3 +119,30 @@ jobs:
         working-directory: ${{github.workspace}}/build/target
         shell: bash
         run: ./Desbordante_test --gtest_filter='*:-*HeavyDatasets*'
+  run_tests_apple_clang:
+    runs-on: macos-14
+    strategy:
+      matrix:
+        cfg:
+          - { BUILD_TYPE: Release }
+          - { BUILD_TYPE: Debug }
+          - { BUILD_TYPE: Debug, SANITIZER : ADDRESS }
+          - { BUILD_TYPE: Debug, SANITIZER : UB }
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download libraries
+        run: brew install make boost cmake
+        shell: bash
+      - name: Download datasets
+        uses: ./.github/composite-actions/download-datasets
+      - name: Build
+        run: |
+          if [[ "${{matrix.cfg.BUILD_TYPE}}" == "Debug" ]]; then
+            ./build.sh --debug --sanitizer=${{ matrix.cfg.SANITIZER }}
+          else
+            ./build.sh
+          fi
+      - name: Test
+        working-directory: ${{github.workspace}}/build/target
+        shell: bash
+        run: ./Desbordante_test --gtest_filter='*:-*HeavyDatasets*'
