--- a/.github/workflows/core-tests.yml
+++ b/.github/workflows/core-tests.yml
@@ -15,6 +15,7 @@ on:
   push:
     branches:
       - main
+      - apple-clang-buildability
     #paths-ignore:
       #- docs/**
       #- README.md
